--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^10.0.2",
+    "js-cookie": "^2.2.1",
     "json-server": "^0.16.3",
+    "jsonwebtoken": "^8.5.1",
     "postcss": "^8.1.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
